# protorun

./: .clinerules  .gitignore  Cargo.toml
docs/: implementation-plan.md  language-spec.md
docs/design/: function-signature-unification-plan.md  let-decl-unification-plan.md  type-keyword-unification-plan.md
docs/design-decisions/: control-structures.md
docs/examples/: calculator.pr  ownership_example.pr  state_counter.pr
docs/language-spec/: 01-introduction.md  02-lexical-structure.md  02-type-system.md  03-declarations.md  03-expressions.md  03-type-system.md  04-declarations.md  04-ownership.md  04-statements.md  05-algebraic-effects.md  05-expressions.md  05-statements.md  06-context-types.md  06-expressions.md  06-modules.md  06-ownership.md  07-algebraic-effects.md  07-examples.md  07-modules.md  07-ownership.md  07-standard-library.md  08-algebraic-effects.md  08-examples.md  08-grammar.md  08-standard-library.md  09-examples.md  09-future.md  09-grammar.md  09-modules.md  10-examples.md  10-future.md  10-standard-library.md  11-examples.md  11-grammar.md  11-references.md  12-grammar.md  13-future.md  14-references.md
examples/: hello.pr
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: debug_unexpected_eof.rs  lib.rs  main.rs  test_parse.rs
src/protorun/: mod.rs
src/protorun/ast/: mod.rs  tests.rs
src/protorun/error/: mod.rs  tests.rs
task-memo/: 20250412.md
taskdef/: 20250415-effect.md  20250417-docs.md  20250417-record-literal-parser.md  function-type-syntax-update.md
(+23 files in other folders)
