[package]
name = "protorun"
version = "0.1.0"
edition = "2021"
authors = ["ユーザー"]
description = "Protorunプログラミング言語のインタープリタ"

[dependencies]

[[bin]]
name = "protorun"
path = "src/main.rs"

[[bin]]
name = "test_parse"
path = "src/test_parse.rs"

[[bin]]
name = "debug_unexpected_eof"
path = "src/debug_unexpected_eof.rs"
